# filen-rs

./: .editorconfig  .gitignore  .gitmodules  .sqlfluff  CLAUDE.md  Cargo.toml  README.md  build-ios.sh  rust-toolchain.toml  taplo.toml
filen-android-documents-provider/: Cargo.toml
filen-android-documents-provider/src/: lib.rs
filen-cache/: Cargo.toml
filen-cache/src/: error.rs  handle.rs  lib.rs  state.rs
filen-cache/src/sql/: diff.rs  dir.rs  event.rs  file.rs  item.rs  membership.rs  mod.rs  root.rs  statements.rs  tests.rs
filen-cache/src/sql/raw/: ancestry_of_uuid.sql  (+17 more)
filen-cache/src/state/: event.rs  mod.rs  tests.rs
filen-cache/tests/: cache_tests.rs
filen-cache/tests/helpers/: mod.rs
filen-cli/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  export-api-key.sh  install.sh
filen-cli/docs/: markdown_docs_outline.yaml
filen-cli/src/: auth.rs  commands.rs  completion.rs  custom_arg_values.rs  docs.rs  lib.rs  main.rs  ui.rs  updater.rs  util.rs
filen-cli/src/snapshots/: filen_cli__ui__tests__ui-2.snap  filen_cli__ui__tests__ui-3.snap  filen_cli__ui__tests__ui.snap
filen-cli/tests/: auth_tests.rs  commands_tests.rs  main_tests.rs  updater_tests.rs
filen-macros/: Cargo.toml
filen-macros/src/: anchored_ref.rs  lib.rs  rkyv_self.rs  sdk_type_derives.rs
filen-mobile-native-cache/: Cargo.toml
filen-mobile-native-cache/sql/: clear_orphaned_search_items.sql  clear_recents.sql  clear_search_from_items.sql  delete_dir_meta.sql  delete_file_meta.sql  delete_item.sql  delete_item_by_name_parent_not_uuid.sql  delete_stale_trashed.sql  delete_stale_with_parent.sql  dump_db.sql  init.sql  insert_item.sql  mark_stale_trashed.sql  mark_stale_with_parent.sql  recursive_select_path_from_uuid.sql  select_changed_children.sql  select_changed_trash.sql  select_changed_workingset.sql  select_child_file_joined_by_name.sql  select_dir.sql  select_dir_children.sql  select_dir_dir_children.sql  select_dir_file_children.sql  select_file.sql  select_file_joined.sql  select_item.sql  select_item_by_parent_name.sql  select_object.sql  select_pos_not_in_uuids.sql  select_recents.sql  select_root.sql  select_search.sql  select_trash_children.sql  select_uuid_type_name_by_parent.sql  select_working_set.sql  trash_item.sql  update_dir_favorite_rank.sql  update_dir_last_listed.sql  update_file.sql  update_file_favorite_rank.sql  (+10 more)
filen-mobile-native-cache/src/: auth.rs  env.rs  error.rs  lib.rs  local.rs  remote.rs  search.rs  socket.rs  sync.rs  thumbnail.rs  tokio.rs  traits.rs
filen-mobile-native-cache/src/ffi/: mod.rs
filen-mobile-native-cache/src/io/: mod.rs
filen-mobile-native-cache/src/sql/: changes.rs  dir.rs  error.rs  file.rs  item.rs  mod.rs  object.rs  statements.rs  types.rs
filen-mobile-native-cache/tests/: db_tests.rs
filen-network-drive/: Cargo.toml
filen-network-drive/src/: lib.rs  rclone_installation.rs  rclone_rc_api.rs
filen-network-drive/tests/: test.rs
filen-sdk-rs/: .gitignore  Cargo.toml  wasm-pack-bundler.sh  wasm-pack.sh
filen-sdk-rs/benches/: cache_insertion.rs
filen-sdk-rs/examples/: cache_search_bench.rs
filen-sdk-rs/npm/: main.test.ts  package-lock.json  package.json  vite.config.ts
filen-sdk-rs/npm/test_imgs/: parrot.heif
filen-sdk-rs/src/: chats.rs  consts.rs  error.rs  lib.rs  notes.rs  prelude.rs  progress.rs  runtime.rs  search.rs  serde.rs  sockets.rs  thumbnail.rs  util.rs
filen-sdk-rs/src/api/: download.rs  mod.rs
filen-sdk-rs/src/auth/: http.rs  js_impls.rs  mod.rs  shared_client.rs  unauth.rs  v1.rs  v2.rs  v3.rs
filen-sdk-rs/src/cache/: bench_support.rs  error.rs  handle.rs  js_impl.rs  mod.rs
filen-sdk-rs/src/connect/: contacts.rs  fs.rs  js_impls.rs  mod.rs
filen-sdk-rs/src/crypto/: connect.rs  edge_case_tests.rs  error.rs  file.rs  mod.rs  notes.rs  notes_and_chats.rs  rsa.rs  shared.rs  v1.rs  v2.rs  v3.rs
filen-sdk-rs/src/fs/: cache.rs  client_impl.rs  dir.rs  enums.rs  file.rs  js_impl.rs  meta_recovery.rs  mod.rs  name.rs  traits.rs  zip.rs
filen-sdk-rs/src/http_provider/: client_impl.rs  js_impl.rs  mod.rs
filen-sdk-rs/src/io/: canonical_path.rs  client_impl.rs  dir_download.rs  dir_upload.rs  fs_tree_builder.rs  js_impl.rs  meta_ext.rs  mod.rs
filen-sdk-rs/src/js/: dir.rs  file.rs  item.rs  managed_futures.rs  mod.rs  params.rs  returned_types.rs  shared.rs  test.rs  uniffi.rs  wasm.rs
filen-sdk-rs/src/obs/: mod.rs
filen-sdk-rs/src/socket/: consts.rs  events.rs  listener_manager.rs  mod.rs  native.rs  shared.rs  thread_handling.rs  traits.rs  wasm.rs
filen-sdk-rs/src/sync/: lock.rs  mod.rs
filen-sdk-rs/src/user/: events.rs  mod.rs
filen-sdk-rs/tests/: cache_search_tests.rs  cache_tests.rs  chat_tests.rs  client_tests.rs  compat_tests.rs  connect_tests.rs  dir_tests.rs  exif_tests.rs  file_tests.rs  get_item_path_tests.rs  login_test.rs  note_tests.rs  socket_reconnect.rs  socket_test.rs  socket_tests.rs  sync_tests.rs  test_utils.rs  user_tests.rs
filen-sdk-rs/tests/helpers/: mod.rs
filen-sdk-rs/web/: .gitignore  .npmignore  filen-sdk-worker-thread.js  index.html  main.test.ts  package-lock.json  package.json  sw.ts  tsconfig.json  ubrn.config.yaml  vite.config.ts  vitest.config.ts  worker.ts
filen-types/: Cargo.toml
filen-types/src/: auth.rs  conversions.rs  error.rs  fs.rs  lib.rs  traits.rs  uniffi_impls.rs
filen-types/src/api/: mod.rs  response.rs
filen-types/src/crypto/: mod.rs
filen-types/src/rkyv/: date_time.rs
filen-types/src/serde/: boolean.rs  cow.rs  hex.rs  mod.rs  number.rs  option.rs  parent_uuid.rs  rsa.rs  time.rs  uuid.rs
filen-wasm/: .gitignore  Cargo.toml  wasm-pack.sh
filen-wasm/.cargo/: config.toml
filen-wasm/pkg/: main.test.ts  package-lock.json  package.json  vite.config.ts
filen-wasm/src/: ffi.rs  lib.rs
filen-wasm/ts-tests/: index.test.ts  package-lock.json  package.json  tsconfig.json  update.sh
heic-decoder/: Cargo.toml  build.rs
heic-decoder/src/: lib.rs
heif-decoder/: Cargo.toml  build.rs  wrapper.h
heif-decoder/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
uniffi-bindgen/: Cargo.toml
(+490 files in other folders)
