[workspace]
resolver = "2"
members = [
	"filen-mobile-native-cache",
	"filen-sdk-rs",
	"filen-types",
	"filen-macros",
	"heif-decoder",
	"test-utils",
	"uniffi-bindgen",
	"uniffi-bindgen-swift",
	"filen-cli"
]
# wasm needs to be built separately because otherwise rust-analyzer
# will try to build it for the same target as the rest of the workspace
# which doesn't work
exclude = [
	"filen-wasm"
]

[profile.test]
opt-level = 3
