[workspace]
resolver = "2"
members = [
	"anchored-ref",
	"filen-mobile-native-cache",
	"filen-sdk-rs",
	"filen-types",
	"filen-macros",
	"heif-decoder",
	"test-utils",
	"uniffi-bindgen",
	"uniffi-bindgen-swift",
	"filen-cli",
]

[profile.test]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[profile.web-release]
inherits = "release"
opt-level = "s"

[patch.crates-io]
rayon = { git = "https://github.com/Enduriel/rayon.git", rev = "cc48c198e609ff69a205e26db71b890b6b633746" }
