[workspace]
resolver = "2"
members = [
	"anchored-ref",
	"filen-mobile-native-cache",
	"filen-sdk-rs",
	"filen-types",
	"filen-macros",
	"heif-decoder",
	"test-utils",
	"uniffi-bindgen",
	"uniffi-bindgen-swift",
	"filen-cli",
	"filen-rclone-wrapper",
]

[profile.test]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[profile.web-release]
inherits = "release"
opt-level = "s"
