[package]
name = "filen-android-documents-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
filen-mobile-native-cache = { version = "0.1.0", path = "../filen-mobile-native-cache" }
uniffi = { version = "0.29.2", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.2", features = [ "build" ] }

[lib]
crate-type = ["cdylib"]
name = "filen_android_documents_provider"
