[package]
name = "filen-cli"
version = "0.2.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"
metadata.workspaces = { independent = true }

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
filen-sdk-rs = { path = "../filen-sdk-rs", features = ["tokio"] }
filen-types = { path = "../filen-types" }
filen-network-drive = { path = "../filen-network-drive" }
log = "0.4.27"
shlex = "1.3.0"
tokio = { version = "1.47.1", features = [
	"rt-multi-thread",
	"macros",
	"process",
] }
keyring = { version = "3", features = [
	"apple-native",
	"windows-native",
	"sync-secret-service",
	"vendored",
	"crypto-rust",
] }
serde = "1.0.219"
serde_json = "1.0.142"
base64 = "0.22.1"
dialoguer = { version = "0.12.0", features = ["history", "password"] }
tiny-gradient = "0.1.0"
termsize = "0.1.9"
humansize = "2.1.3"
chrono = { version = "0.4.41", features = ["serde"] }
unicode-width = "0.2.1"
ansi-width = "0.1.0"
ftail = "0.3.1"
dirs = "6.0.0"
