[package]
name = "filen-cli"
version = "0.2.5"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"
metadata.workspaces = { independent = true }

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
filen-sdk-rs = { path = "../filen-sdk-rs" }
filen-types = { path = "../filen-types" }
filen-rclone-wrapper = { path = "../filen-rclone-wrapper" }
filen-macros = { path = "../filen-macros" }
log = "0.4.27"
shlex = "1.3.0"
tokio = { version = "1.47.1", features = [
	"rt-multi-thread",
	"macros",
	"process",
] }
keyring = { version = "3", features = [
	"apple-native",
	"windows-native",
	"sync-secret-service",
	"vendored",
	"crypto-rust",
] }
serde = "1.0.219"
serde_json = "1.0.142"
base64 = "0.22.1"
dialoguer = { version = "0.12.0", features = ["history", "password"] }
tiny-gradient = "0.1.0"
termsize = "0.1.9"
humansize = "2.1.3"
chrono = { version = "0.4.41", features = ["serde"] }
unicode-width = "0.2.1"
ansi-width = "0.1.0"
ftail = "0.3.1"
dirs = "6.0.0"
reqwest = { version = "0.12.22", features = [
	"rustls-tls",
], default-features = false }
self-replace = "1.5.0"
tempfile = "3.23.0"
clap_builder = "4.5.53"
anstyle = "1.0.13"
semver = "1.0.27"

[dev-dependencies]
test-utils = { path = "../test-utils", features = ["cli"] }
filen-macros = { path = "../filen-macros" }
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
dotenv = "0.15.0"
predicates = "3.1.3"
rand = "0.9.2"
insta = "1.44.3"
regex = "1.12.2"

[target.'cfg(target_os = "linux")'.dependencies]
rexpect = "0.6.2"

[features]
default = []
is_docker = []
