[package]
name = "filen-macros"
version = "0.2.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"

[lib]
proc-macro = true

[features]
default = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.12.2"
syn = { version = "2.0", features = ["full", "visit-mut", "fold"] }
