[package]
name = "filen-mobile-native-cache"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = []
malformed = ["filen-sdk-rs/malformed"]


[dependencies]
filen-sdk-rs = { version = "0.1.0", path = "../filen-sdk-rs", features = ["tokio", "malformed"] }
futures = "0.3.31"
uniffi = { version = "0.29.2", features = [ "cli" ] }
libsqlite3-sys = { version = "0.34", features = ["bundled"] }
uuid = { version = "1.17.0", default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
filen-sdk-rs-macros = { version = "0.1.0", path = "../filen-sdk-rs-macros", features = ["tokio"] }
env_logger = "0.11.8"
rusqlite = { version = "0.36.0", features = ["bundled"] }
filen-types = { path = "../filen-types" , features = ["rusqlite"]}
image = {version = "0.25.6", default-features = false} # only need the error type here


# Optional dependencies
tokio = {version = "1.45.1", features = ["rt-multi-thread", "macros", "fs"]}
log = "0.4.27"
tokio-util = { version = "0.7.15", features = ["compat"] }
sha2 = "0.10.9"
once_cell = "1.21.3"
thiserror = "2.0.12"
faster-hex = "0.10.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"

[target.'cfg(target_os="ios")'.dependencies]
oslog = "0.2.0"
[target.'cfg(target_os="android")'.dependencies]
android_log = "0.1.3"
[target.'cfg(not(any(target_os="android",target_os="ios")))'.dependencies]
env_logger = "0.11.8"

[build-dependencies]
uniffi = { version = "0.29.2", features = [ "build" ] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
test-utils = { path = "../test-utils" }
test-log = "0.2.17"
rand = "0.9.1"
base64 = "0.22.1"
