[package]
name = "filen-mobile-native-cache"
version = "0.2.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"
metadata.workspaces = { independent = true }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = []
malformed = ["filen-sdk-rs/malformed"]
heif-decoder = ["filen-sdk-rs/heif-decoder"]

[dependencies]
filen-sdk-rs = { path = "../filen-sdk-rs", features = [
	"tokio",
	"malformed",
] }
futures = "0.3.31"
uniffi = { version = "0.29.4", features = ["cli"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
uuid = { version = "1.18.0", default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
filen-macros = { path = "../filen-macros", features = [
	"tokio",
] }
env_logger = "0.11.8"
rusqlite = { version = "0.37.0", features = ["bundled"] }
filen-types = { path = "../filen-types", features = ["rusqlite"] }
image = { version = "0.25.6", default-features = false } # only need the error type here


# Optional dependencies
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs"] }
log = "0.4.27"
tokio-util = { version = "0.7.16", features = ["compat"] }
sha2 = "0.10.9"
once_cell = "1.21.3"
thiserror = "2.0.14"
faster-hex = "0.10.0"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"

[target.'cfg(target_os="ios")'.dependencies]
oslog = "0.2.0"
[target.'cfg(target_os="android")'.dependencies]
android_log = "0.1.3"
jni = "0.21.1"
[target.'cfg(not(any(target_os="android",target_os="ios")))'.dependencies]
env_logger = "0.11.8"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
test-utils = { path = "../test-utils" }
test-log = "0.2.18"
rand = "0.9.2"
base64 = "0.22.1"
