[package]
name = "filen-mobile-native-cache"
version = "0.2.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"
metadata.workspaces = { independent = true }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = []
malformed = ["filen-sdk-rs/malformed"]
heif-decoder = ["filen-sdk-rs/heif-decoder"]

[dependencies]
filen-sdk-rs = { path = "../filen-sdk-rs", features = ["malformed"] }
futures = "0.3.31"
uniffi = { version = "0.29.4", features = ["cli"] }
# Must track the libsqlite3-sys version rusqlite resolves to: `links = "sqlite3"` allows only
# one copy workspace-wide (filen-sdk-rs's cache pulls rusqlite 0.39).
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
uuid = { version = "1.18.0", default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
filen-macros = { path = "../filen-macros" }
# `fallible_uint` restores the u64/usize ToSql/FromSql impls that rusqlite 0.38 made opt-in.
rusqlite = { version = "0.39", features = ["bundled", "fallible_uint"] }
filen-types = { path = "../filen-types", features = ["rusqlite"] }
image = { version = "0.25.6", default-features = false } # only need the error type here

# Optional dependencies
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tokio-util = { version = "0.7.16", features = ["compat"] }
once_cell = "1.21.3"
thiserror = "2.0.14"
hex = { package = "const-hex", version = "1.18.1" }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
blake3 = { version = "1.8.3", features = ["rayon", "mmap"] }

[target.'cfg(target_os="android")'.dependencies]
jni = "0.21.1"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
test-utils = { path = "../test-utils" }
rand = "0.9.2"
base64 = "0.22.1"
