[package]
name = "filen-network-drive"
version = "0.0.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"
metadata.workspaces = { independent = true }

[dependencies]
anyhow = "1.0.98"
filen-sdk-rs = { path = "../filen-sdk-rs", features = ["tokio"] }
log = "0.4.27"
reqwest = { version = "0.12.22", features = [ "rustls-tls" ], default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "process"] }
