[package]
name = "filen-sdk-rs"
version = "0.3.20"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tokio = ["tokio/rt", "tokio-stream", "tokio-util"]
malformed = []
heif-decoder = ["dep:heif-decoder"]
avif-decoder = ["image/avif-native"]
# node = ["dep:napi", "dep:napi-derive", "filen-types/node"]

[dependencies]
reqwest = { version = "0.12.22", features = [
	"json",
	"stream",
	"rustls-tls",
], default-features = false }

filen-types = { path = "../filen-types" }
rand = "0.9.2"
old_rng = { package = "rand", version = "0.8.5" }           # for compatibility with rsa 0.9.8
aes-gcm = { version = "0.10.3", features = ["std"] }
generic-array = "1.2.0"
thiserror = "2.0.14"
base64 = "0.22.1"
pbkdf2 = { version = "0.12.2", features = ["std", "sha2"] }
sha2 = "0.10.9"
rsa = "0.9.8"
hkdf = { version = "0.12.4", features = ["std"] }
hmac = { version = "0.12.1", features = ["std"] }
uuid = { version = "1.18.0", default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
digest = "0.10.7"
serde = "1.0.219"
serde_json = "1.0.142"
faster-hex = { version = "0.10.0", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
serde_path_to_error = "0.1.17"
sha1 = "0.10.6"
futures = "0.3.31"
# Waiting until https://github.com/abonander/mime_guess/pull/101 is in a released version
mime_guess = { git = "https://github.com/abonander/mime_guess", rev = "90f3d09696f7c08dcac94ca2bb2a279383bb20ce" }
md2 = "0.10.2"
md4 = "0.10.2"
md-5 = "0.10.6"
cbc = "0.1.2"
image = { version = "0.25.6", default-features = false, features = [
	"png",
	"jpeg",
	"gif",
	"tiff",
	"webp",
	"qoi",
] }
tokio = { version = "1.47.1", default-features = false, features = [
	"sync",
	"macros",
] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
	"fs",
], optional = true }
tokio-util = { version = "0.7.16", default-features = false, features = [
	"compat",
], optional = true }
bytes = "1.10.1"
log = "0.4.27"
napi = { version = "3.0.0", default-features = false, features = [
	"napi10",
	"async",
	"latin1",
	"chrono_date",
	"serde-json",
], optional = true }
napi-derive = { version = "3.0.0", default-features = false, optional = true }
async_zip = { git = "https://github.com/Enduriel/rs-async-zip.git", rev = "6ad27fd1010b35de2a96143884c1bce95e939e5e", default-features = false, features = [
	"chrono",
] }
serde_bytes = "0.11.17"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
hyper-util = { version = "0.1.16", features = ["client-legacy"] }
heif-decoder = { path = "../heif-decoder", optional = true }
tokio-tungstenite = { version = "0.28.0", features = [
	"rustls",
	"rustls-tls-native-roots",
] }
tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom_v3 = { package = "getrandom", version = "0.3", features = [
	"wasm_js",
] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.18.0", default-features = false, features = [
	"rng-getrandom",
] }
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.100"
wasmtimer = "0.4.2"
tsify = { version = "0.5.5", default-features = false, features = [
	"wasm-bindgen",
	"js",
] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.22", default-features = false, features = [
	"WebSocket",
	"MessageEvent",
] }
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.5"
wasm-streams = "0.4.2"
pin-project-lite = "0.2.16"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", default-features = false, features = [
	"compat",
] }
test-utils = { path = "../test-utils" }
filen-macros = { path = "../filen-macros" }
zip = { version = "5.1.1", default-features = false }
