[package]
name = "filen-sdk-rs"
version = "0.3.31"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["multi-threaded-crypto"]
malformed = []
heif-decoder = ["dep:heif-decoder"]
avif-decoder = ["image/avif-native"]
uniffi = ["dep:uniffi", "filen-types/uniffi"]
wasm-full = ["multi-threaded-crypto"]
service-worker = ["filen-types/service-worker"]
multi-threaded-crypto = ["dep:rayon", "dep:wasm-bindgen-rayon"]

[dependencies]
reqwest = { version = "0.12.22", features = [
	"json",
	"stream",
	"rustls-tls",
	"gzip",
], default-features = false }

filen-types = { path = "../filen-types" }
rand = "0.9.2"
old_rng = { package = "rand", version = "0.8.5" } # for compatibility with rsa 0.9.8
aes-gcm = { version = "0.10.3", features = ["std"] }
generic-array = "1.2.0"
thiserror = "2.0.14"
base64 = "0.22.1"
pbkdf2 = { version = "0.12.2", features = ["std", "sha2"] }
sha2 = "0.10.9"
rsa = "0.9.8"
hkdf = { version = "0.12.4", features = ["std"] }
hmac = { version = "0.12.1", features = ["std"] }
uuid = { version = "1.18.0", default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
digest = "0.10.7"
serde = "1.0.219"
serde_json = "1.0.142"
faster-hex = { version = "0.10.0", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
serde_path_to_error = "0.1.17"
sha1 = "0.10.6"
futures = "0.3.31"
# Waiting until https://github.com/abonander/mime_guess/pull/101 is in a released version
mime_guess = { git = "https://github.com/abonander/mime_guess", rev = "90f3d09696f7c08dcac94ca2bb2a279383bb20ce" }
md2 = "0.10.2"
md4 = "0.10.2"
md-5 = "0.10.6"
cbc = "0.1.2"
image = { version = "0.25.6", default-features = false, features = [
	"png",
	"jpeg",
	"gif",
	"tiff",
	"webp",
	"qoi",
] }
tokio = { version = "1.47.1", default-features = false, features = [
	"sync",
	"macros",
] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
	"sync",
] }
tokio-util = { version = "0.7.16", default-features = false, features = [
	"compat",
], optional = true }
bytes = "1.10.1"
log = "0.4.27"
async_zip = { git = "https://github.com/Enduriel/rs-async-zip.git", rev = "6ad27fd1010b35de2a96143884c1bce95e939e5e", default-features = false, features = [
	"chrono",
] }
serde_bytes = "0.11.17"
urlencoding = "2.1.3"
base32 = "0.5.1"
regex = "1.11.3"
rayon = { version = "1.11.0", optional = true }
pin-project-lite = "0.2.16"
filen-macros = { path = "../filen-macros" }
yoke = "0.8.1"
stable_deref_trait = "1.2.1"
string-interner = "0.19.0"
rmp-serde = "1.3.0"
blake3 = { version = "1.8.3", features = ["rayon"] }

# ios dependencies
[target.'cfg(target_os="ios")'.dependencies]
oslog = "0.2.0"

# android dependencies
[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.15.0"

# native (not wasm) only dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
hyper-util = { version = "0.1.16", features = ["client-legacy"] }
heif-decoder = { path = "../heif-decoder", optional = true }
tokio-tungstenite = { version = "0.28.0", features = [
	"rustls",
	"rustls-tls-webpki-roots",
] }
tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.47.1", default-features = false, features = [
	"sync",
	"macros",
	"fs",
	"rt-multi-thread",
	"rt",
] }
tokio-util = { version = "0.7.16", default-features = false, features = [
	"compat",
] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
	"sync",
	"fs",
] }
uniffi = { version = "0.29.4", optional = true }
tokio-rustls = { version = "0.26.4", default-features = false }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

# wasm only dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom_v3 = { package = "getrandom", version = "0.3", features = [
	"wasm_js",
] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.18.0", default-features = false, features = [
	"rng-getrandom",
] }
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.104"
wasmtimer = "0.4.2"
tsify = { version = "0.5.5", default-features = false, features = [
	"wasm-bindgen",
	"js",
] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.22", default-features = false, features = [
	"WebSocket",
	"MessageEvent",
	"CloseEvent",
	"WorkerOptions",
	"WorkerType",
	"DedicatedWorkerGlobalScope",
] }
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.5"
wasm-streams = "0.4.2"
# we don't need this directly, but wasmtimer uses it and doesn't enable the nightly feature
# which meant that wasm_atomic was not being used
parking_lot = { version = "0.12", features = ["nightly"] }
wasm-bindgen-rayon = { version = "1.3.0", optional = true }

# dev-dependencies
# native (not wasm) only dev-dependencies
[target.'cfg(not(all(target_family="wasm", target_os= "unknown")))'.dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", default-features = false, features = [
	"compat",
] }
test-utils = { path = "../test-utils" }
filen-macros = { path = "../filen-macros" }
zip = { version = "5.1.1", default-features = false }
imap = { version = "3.0.0-alpha.15", default-features = false, features = [
	"rustls-tls",
] }
mail-parser = "0.11.1"
reqwest = { version = "0.12.22", features = [
	"cookies",
	"multipart",
], default-features = false }
scraper = "0.24.0"
env_logger = "0.11.8"

# wasm only dev-dependencies
[target.'cfg(all(target_family="wasm", target_os= "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.54"
