[package]
name = "filen-types"
version = "0.2.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
digest = "0.10.7"
hex = { package = "const-hex", version = "1.18.1", features = ["serde"] }
rsa = "0.9.8" # update to 0.10 when it is released, as it patches a side-channel timing based attack
rusqlite = { version = "0.37.0", optional = true, default-features = false, features = [
	"uuid",
] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.142", features = ["raw_value"] }
serde_repr = "0.1.20"
sha2 = "0.10.9"
thiserror = "2.0.14"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
tsify = { version = "0.5.5", default-features = false, features = ["js"] }
serde_bytes = "0.11.17"
filen-macros = { path = "../filen-macros" }
uniffi = { version = "0.29.4", optional = true }
yoke = { version = "0.8.1", features = ["derive"] }
blake3 = "1.8.3"
generic-array = { git = "https://github.com/Enduriel/generic-array", rev = "7a5e0764d4cef9e7fa767fddc7c75bc2ceb743b8", features = [
	"alloc",
	"rkyv-full",
] }
typenum = "1.20.0"
rand = "0.9.2"
url = { version = "2.5.7", features = ["serde"] }
rkyv = "0.8.16"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"

[features]
default = []
rusqlite = ["dep:rusqlite"]
uniffi = ["dep:uniffi"]
service-worker = []
