[package]
name = "heif-decoder"
version = "0.2.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"
links = "de265"

[dependencies]
image = { version = "0.25.6", default-features = false }

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1.54"

[dev-dependencies]
image = { version = "0.25.6", default-features = false, features = ["png"] }
