[package]
name = "test-utils"
version = "0.2.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
filen-sdk-rs = { path = "../filen-sdk-rs" }
futures = "0.3.31"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
