[package]
name = "test-utils"
version = "0.2.0"
authors = ["FilenCloudDienste"]
edition = "2024"
repository = "https://github.com/FilenCloudDienste/filen-rs"
license = "AGPL-3.0"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
filen-sdk-rs = { path = "../filen-sdk-rs" }
futures = "0.3.31"
log = "0.4.28"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
filen-cli = { path = "../filen-cli", optional = true }
assert_cmd = { version = "2.1.1", optional = true }
assert_fs = { version = "1.1.3", optional = true }

[features]
cli = ["dep:filen-cli", "dep:assert_cmd", "dep:assert_fs"]
